upgrade to Spring AI - 1.0.0-M1